refactor: 로컬에서 쉼터 캐시 caffeine 사용하도록 변경