@@ -2,10 +2,8 @@ package com.team19.musuimsa.config;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.cache.Cache;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.cache.caffeine.CaffeineCache;
@@ -14,10 +12,10 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 
-@Profile({"dev", "prod"})
+@Profile("prod")
 @EnableCaching
 @Configuration
-public class CaffeineCacheConfig {
+public class WeatherCaffeineConfig {
 
     @Value("${cache.weather.expire-after-write}")
     private Duration weatherExpireAfterWrite;
@@ -34,10 +32,8 @@ public class CaffeineCacheConfig {
                         .maximumSize(weatherMaximumSize)
                         .build()
         );
-
         SimpleCacheManager manager = new SimpleCacheManager();
-        List<Cache> caches = Arrays.asList(weather);
-        manager.setCaches(caches);
+        manager.setCaches(List.of(weather));
         return manager;
     }
 }
